--- a/NEKOGURUMA/MainWindow.xaml
+++ b/NEKOGURUMA/MainWindow.xaml
@@ -10,13 +10,12 @@
     mc:Ignorable="d"
  >
     <Grid>
-        <NavigationView x:Name="nvSample" PaneDisplayMode="LeftCompact" IsBackButtonVisible="Collapsed">
-            <NavigationView.MenuItems>
-                <NavigationViewItem Icon="Camera" Tag="Screenshot" />
-                <NavigationViewItem Icon="Volume" Tag="Volume" />
-            </NavigationView.MenuItems>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="auto" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
 
-            <local:OleWebview />
-        </NavigationView>
+        <local:SideBar x:Name="SideBar" Grid.Column="0" />
+        <local:OleWebview x:Name="OleWebview" Grid.Column="1"/>
     </Grid>
 </Window>
