--- a/NEKOGURUMA/MainWindow.xaml
+++ b/NEKOGURUMA/MainWindow.xaml
@@ -15,7 +15,11 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <local:SideBar x:Name="SideBar" Grid.Column="0" />
+        <local:SideBar
+            x:Name="SideBar"
+            Grid.Column="0"
+            ScreenshotButtonClicked="SideBar_ScreenshotButtonClicked"
+        />
         <local:OleWebview x:Name="OleWebview" Grid.Column="1"/>
     </Grid>
 </Window>
