--- a/NEKOGURUMA/MainWindow.xaml
+++ b/NEKOGURUMA/MainWindow.xaml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Window
+<winex:WindowEx 
     x:Class="NEKOGURUMA.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -7,9 +7,15 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:Microsoft.UI.Xaml.Controls"
+    xmlns:winex="using:WinUIEx"
+    Width="1208"
+    Height="684"
     mc:Ignorable="d"
  >
-    <Grid>
+    <Window.SystemBackdrop>
+        <MicaBackdrop />
+    </Window.SystemBackdrop>
+    <Grid x:Name="MainGrid">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto" />
             <ColumnDefinition Width="*" />
@@ -23,4 +29,4 @@
         />
         <local:OleWebview x:Name="OleWebview" Grid.Column="1"/>
     </Grid>
-</Window>
+</winex:WindowEx>
