--- a/NEKOGURUMA/MainWindow.xaml
+++ b/NEKOGURUMA/MainWindow.xaml
@@ -25,6 +25,7 @@
             x:Name="SideBar"
             Grid.Column="0"
             PinButtonClicked="SideBar_PinButtonClicked"
+            VolumeButtonClicked="SideBar_VolumeButtonClicked"
             ScreenshotButtonClicked="SideBar_ScreenshotButtonClicked"
         />
         <local:OleWebview x:Name="OleWebview" Grid.Column="1"/>
