feat: change to use json to save settings

--- a/NEKOGURUMA/MainWindow.xaml
+++ b/NEKOGURUMA/MainWindow.xaml
@@ -27,6 +27,7 @@
             PinButtonClicked="SideBar_PinButtonClicked"
             VolumeButtonClicked="SideBar_VolumeButtonClicked"
             ScreenshotButtonClicked="SideBar_ScreenshotButtonClicked"
+            SettingButtonClicked="SideBar_SettingButtonClicked"
         />
         <local:OleWebview x:Name="OleWebview" Grid.Column="1"/>
     </Grid>
